Correct branch name check

--- a/.github/workflows/project-pull-request.yml
+++ b/.github/workflows/project-pull-request.yml
@@ -177,7 +177,7 @@ jobs:
 
       - name: Check branches for constellation dependencies
         run: |
-          if `cargo tree | grep github.com/constellation-system | sed  's/[^?]*?//' | sed 's/#.*//' | sed 's/branch=//' | grep -Evq "^${{ github.head_ref }}$"`; then
+          if `cargo tree | grep github.com/constellation-system | sed  's/[^?]*?//' | sed 's/#.*//' | sed 's/branch=//' | sed "s:%2[fF]:/:" | grep -Evq "^${{ github.head_ref }}$"`; then
             echo "Constellation depnedencies not on ${{ github.head_ref }} branch:"
             cargo tree | grep github.com/constellation-system
             exit 1
