Fix GSSAPI version

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,7 +34,7 @@ exclude = [
 [features]
 default = ["gssapi", "log", "openssl", "unix"]
 log = ["dep:log"]
-gssapi = ["dep:libgssapi"]
+gssapi = ["dep:libgssapi", "dep:libgssapi-sys"]
 openssl = ["dep:openssl"]
 openssl-vendored = ["openssl/vendored"]
 unix = []
@@ -44,6 +44,7 @@ asn1rs = { version = "0.3" }
 blake2 = { version = "0.10" }
 digest = { version = "0.10" }
 libgssapi = { version = "0.8.1", optional = true }
+libgssapi-sys = { version = "0.3.2", optional = true }
 log = { version = "0.4", optional = true }
 openssl = { version = "0.10", optional = true }
 rand = { version = "0.8" }
